[package]
name = "cia-unix-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.48", features = ["derive"] }
dialoguer = "0.11.0"
regex = "1.11.3"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
ureq = "2.12.1"
walkdir = "2.5.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
